# aec-schema

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: decisions.md  units.md
examples/bom/: invalid_missing_panel_id.json  valid_bom.json
examples/framing/: invalid_unknown_member_type.json  valid_panel_framing.json
examples/opening/: invalid_missing_type.json  valid_door.json  valid_window.json
examples/panel/: invalid_negative_length.json  valid_exterior_panel.json
examples/sequence/: invalid_dependency_cycle.json  valid_member_sequence.json
examples/wall/: invalid_bad_type.json  valid_exterior.json  valid_interior.json
src/aec_schema/: __init__.py  _validator.py
src/aec_schema/schemas/: bom.schema.json  framing.schema.json  opening.schema.json  panel.schema.json  sequence.schema.json  wall.schema.json
tests/: conftest.py  test_bom.py  test_framing.py  test_opening.py  test_panel.py  test_sequence.py  test_wall.py
