[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aec-schema"
version = "0.1.0"
description = "JSON Schema contract layer for the AEC ML pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23",
    "networkx>=3.0",
    "referencing>=0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aec_schema"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
